fix toggle label spacing

--- a/backend/doppelkopf/static/style.css
+++ b/backend/doppelkopf/static/style.css
@@ -11480,11 +11480,11 @@ a:focus {
   left: 3px;
   top: 3px;
   border-radius: 50%;
-  font: 9px/20px sans-serif;
+  font: 10px/20px sans-serif;
   text-transform: uppercase;
   font-weight: bold;
-  text-indent: -21px;
-  word-spacing: 22px;
+  text-indent: -20px;
+  word-spacing: 21px;
   color: #fff;
   text-shadow: -1px -1px rgba(0,0,0,0.15);
   white-space: nowrap;
